# kbench_monopoly

./: .gitignore  README.md  pyproject.toml
src/kbench_monopoly/: __init__.py  board_data.py  config.py  gradio_app.py  runner.py
src/kbench_monopoly/agent/: __init__.py  base.py  llm_default.py  validation.py
tests/: test_gradio_app.py  test_monopoly.py  test_stress.py
